# packet-analyser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/scapy_packet_analyser/: __init__.py  main.py
src/scapy_packet_analyser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_main.py
