[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-packet-analyser"
version = "0.1.0"
description = "A simple Scapy-based packet analyzer"
requires-python = ">=3.10"
dependencies = ["scapy>=2.5.0"]

[project.scripts]
scapy-packet-analyser = "scapy_packet_analyser.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
